test/expected/explain_al8ty_i.out
explain _Alignas(8) typedef int Int
        ^
9: error: typedef can not be aligned
